# pinentry-zellij

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
pinentry-zellij/: Cargo.toml  build.rs
pinentry-zellij-plugin/: Cargo.toml
pinentry-zellij-plugin/src/: backend.rs  lib.rs  main.rs  protocol.rs  ui.rs
pinentry-zellij-protocol/: Cargo.toml
pinentry-zellij-protocol/src/: lib.rs
pinentry-zellij/src/: askpass.rs  assuan.rs  embed.rs  handler.rs  main.rs  protocol.rs  state.rs  tty.rs  zellij.rs
