[package]
name = "pinentry-zellij-plugin"
version = "0.4.1"
edition = "2024"
license = "GPL-2.0"
description = "Zellij plugin for pinentry-zellij"
repository = "https://github.com/likewhatevs/pinentry-zellij"

[lib]
name = "pinentry_zellij_plugin"

[[bin]]
name = "pinentry-zellij-plugin"
path = "src/main.rs"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
pinentry-zellij-protocol = { version = "0.4.1", path = "../pinentry-zellij-protocol" }
ratatui-core = { version = "0.1", default-features = false }
ratatui-widgets = { version = "0.3", default-features = false }
serde_json = "1"
zellij-tile = "0.44"
zeroize = "1"
