[package]
name = "pinentry-zellij"
version = "0.4.0"
edition = "2024"
license = "GPL-2.0"
description = "Pinentry program for Zellij"
repository = "https://github.com/likewhatevs/pinentry-zellij"
readme = "../README.md"
keywords = ["pinentry", "gpg", "zellij", "askpass", "ssh"]
categories = ["command-line-utilities"]

[[bin]]
name = "pinentry-zellij"
path = "src/main.rs"

[dependencies]
dirs = "6"
pinentry-zellij-protocol = { version = "0.4.0", path = "../pinentry-zellij-protocol" }
rpassword = "7"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
xattr = "1"
zeroize = "1"

[build-dependencies]
pinentry-zellij-plugin = { version = "0.4.0", path = "../pinentry-zellij-plugin", artifact = "bin", target = "wasm32-wasip1" }
sha2 = "0.10"

[dev-dependencies]
proptest = "1"
temp-env = "0.3"
